--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap");
 :root {
   /* ? COLOR */
   /* Primary */
@@ -122,7 +122,24 @@ body {
 }
 
 .card-image {
+  position: relative;
+}
 
+.card-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: hsla(277, 64%, 61%, 1);
+  z-index: 0;
+}
+
+.card-image img {
+  position: relative;
+  z-index: 1;
+  opacity: 0.4;
 }
 
 .card-text {
@@ -131,7 +148,8 @@ body {
   align-items: center;
 }
 
-h1, h2 {
+h1,
+h2 {
   text-align: center;
   font-family: var(--ff-inter);
 }
@@ -153,44 +171,62 @@ h2 {
   margin-bottom: 1.5rem;
 }
 
-.text-10k, 
+.text-10k,
 .text-314,
 .text-12m {
   display: flex;
   flex-direction: column;
   margin: 1.1rem 0;
   align-items: center;
-  font-family: 'Inter', sans-serif;
 }
 
-.text-10k p, 
+.text-10k p,
 .text-314 p,
 .text-12m p {
+  font-family: "Inter", sans-serif;
   font-size: 1.7rem;
   font-weight: 700;
 }
 
-.text-10k span, 
+.text-10k span,
 .text-314 span,
 .text-12m span {
+  font-family: "Lexend Deca", sans-serif;
   color: var(--slightly-transparent-white-stat);
   font-size: 0.85rem;
   letter-spacing: 0.1rem;
-
 }
 
-
-
-
-@media (min-width: 600px) {
-
-  body {
-
-  }
+@media (min-width: 768px) {
 
   .card {
-    height: 75vh;
-    min-height: 540px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    width: 600px;
+    max-width: 600px;
+    height: 225px;
+    min-height: 225px;
   }
+
+  .card-image {
+    width: 300px;
+    height: 100%;
+
+  }
+
+  .card-text {
+    width: 300px;
+  }
+
+  .card-image img {
+    content: url(./images/image-header-desktop.jpg);
+
+    width: 100%;
+    height: 100%;
+
+  }
+
 
 }
