--- a/style.css
+++ b/style.css
@@ -198,35 +198,57 @@ h2 {
 }
 
 @media (min-width: 768px) {
-
   .card {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
-    width: 600px;
-    max-width: 600px;
+    width: 650px;
+    max-width: 650px;
     height: 225px;
     min-height: 225px;
   }
 
   .card-image {
-    width: 300px;
+    width: 325px;
     height: 100%;
-
-  }
-
-  .card-text {
-    width: 300px;
   }
 
   .card-image img {
     content: url(./images/image-header-desktop.jpg);
-
     width: 100%;
     height: 100%;
+  }
 
+  .card-text {
+    width: 325px;
+    height: 100%;
+  }
+
+  .statistics {
+    width: 70%;
+    margin: 0 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  h1 {
+    text-align: unset;
+    margin-top: 35px;
+    margin-left: 45px;
+  }
+
+  h2 {
+    font-size: 0.8rem;                                                                                                                                                                                                                                        ;
+    text-align: unset;                                                                                                     
+    margin-left: 45px;
+    margin-right: 75px;
   }
 
 
+
+
 }
+
+
