--- a/style.css
+++ b/style.css
@@ -223,14 +223,16 @@ h2 {
   .card-text {
     width: 325px;
     height: 100%;
+    align-items: start;
   }
 
   .statistics {
-    width: 70%;
-    margin: 0 10px;
+    width: 60%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 10px;
+    margin-left: 45px;
   }
 
   h1 {
@@ -240,15 +242,27 @@ h2 {
   }
 
   h2 {
-    font-size: 0.8rem;                                                                                                                                                                                                                                        ;
-    text-align: unset;                                                                                                     
+    font-size: 0.8rem;
+    text-align: unset;
     margin-left: 45px;
     margin-right: 75px;
   }
 
+  .text-10k,
+  .text-314,
+  .text-12m {
+    align-items: start;
+  }
 
+  .text-10k p,
+  .text-314 p,
+  .text-12m p {
+    font-size: 1.1rem;
+  }
 
-
+  .text-10k span,
+  .text-314 span,
+  .text-12m span {
+    font-size: 0.50rem;
+  }
 }
-
-
