--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 :root {
   /* ? COLOR */
   /* Primary */
@@ -125,6 +127,11 @@ body {
   position: relative;
 }
 
+
+
+/* También se puede usar lo siguiente para la máscara morada: */
+/* background: linear-gradient(hsla(277, 65%, 28%, 0.65), hsla(277, 65%, 28%, 0.65)), url("../images/image-header-desktop.jpg");  */
+
 .card-image::before {
   content: "";
   position: absolute;
@@ -171,26 +178,20 @@ h2 {
   margin-bottom: 1.5rem;
 }
 
-.text-10k,
-.text-314,
-.text-12m {
+.stat {
   display: flex;
   flex-direction: column;
   margin: 1.1rem 0;
   align-items: center;
 }
 
-.text-10k p,
-.text-314 p,
-.text-12m p {
+.stat p {
   font-family: "Inter", sans-serif;
   font-size: 1.7rem;
   font-weight: 700;
 }
 
-.text-10k span,
-.text-314 span,
-.text-12m span {
+.stat span {
   font-family: "Lexend Deca", sans-serif;
   color: var(--slightly-transparent-white-stat);
   font-size: 0.85rem;
@@ -215,7 +216,6 @@ h2 {
   }
 
   .card-image img {
-    content: url(./images/image-header-desktop.jpg);
     width: 100%;
     height: 100%;
   }
@@ -248,21 +248,15 @@ h2 {
     margin-right: 75px;
   }
 
-  .text-10k,
-  .text-314,
-  .text-12m {
+  .stat {
     align-items: start;
   }
 
-  .text-10k p,
-  .text-314 p,
-  .text-12m p {
+  .stat p {
     font-size: 1.1rem;
   }
 
-  .text-10k span,
-  .text-314 span,
-  .text-12m span {
+  .stat span {
     font-size: 0.50rem;
   }
 }
